testsuite/tests/grammar/invalid_token_rule/test.out
== bad-token-casing.lkt ==
bad-token-casing.lkt:5:38: error: Unknown token: example
5 |     @main_rule main_rule <- Example(@example)
  |                                      ^^^^^^^


== unknown-token.lkt ==
unknown-token.lkt:5:38: error: Unknown token: NoSuchToken
5 |     @main_rule main_rule <- Example(@NoSuchToken)
  |                                      ^^^^^^^^^^^


lkt_compile: Done
